--- a/index.html
+++ b/index.html
@@ -1,17 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="main.css">
+    <title>Flex lesson</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <h1>Sardor sSs</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam deserunt quo quisquam consectetur nobis voluptate, aliquam nemo hic esse molestias numquam rem quae facilis vero aspernatur cum harum voluptatibus amet.</p>
+    <header>
+        <div class="container">
+            <nav>
+                <a href="#sss"><img src="./icon/replit.svg" alt="logo"></a>
+                <ul>
+                    <li>
+                        <a href="#" class="active">Home</a>
+                    </li>
+                    <li>
+                        <a href="#project">Projects</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="content">
+                <h1 id="sss">Sardor</h1>
+                <p class="small">Web Developer</p>
+                <p>I can do landing pages</p>
+                <p>I'm a Frontend JS and React Developer</p>
+                <div class="icons">
+                    <img src="icon/telegram.png" alt="icon">
+                    <img src="icon/twitter.png" alt="icon">
+                    <img src="icon/youtube.png" alt="icon">
+                    <img src="icon/github.png" alt="icon">
+                    <img src="icon/instagram.png" alt="icon">
+                    <img src="icon/linkedin.png" alt="icon">
+                    <img src="icon/whatsapp.png" alt="icon">
+                </div>
+            </div>
+        </div>
+
+    </header>
+    <main>
+        <div class="section1">
+            <h2 id="project">my projects</h2>
+            <p>here are some of my projects, you may like.</p>
+        </div>
+        <div class="section2">
+            <div class="box1">
+                <div class="box">
+                    <img src="img/original-e8278705fab1f1036f26c2419edf8f0f.jpeg" alt="img">
+                    <p>Lorem ipsum dolor sit amet consectetur.</p>
+                </div>
+                <div class="box">
+                    <img src="img/original-e8278705fab1f1036f26c2419edf8f0f.jpeg" alt="img">
+                    <p>Lorem ipsum dolor sit amet consectetur.</p>
+                </div>
+                <div class="box">
+                    <img src="img/original-e8278705fab1f1036f26c2419edf8f0f.jpeg" alt="img">
+                    <p>Lorem ipsum dolor sit amet consectetur.</p>
+                </div>
+            </div>
+            <div class="box2">
+                <div class="box">
+                    <img src="img/original-e8278705fab1f1036f26c2419edf8f0f.jpeg" alt="img">
+                    <p>Lorem ipsum dolor sit amet consectetur.</p>
+                </div>
+                <div class="box">
+                    <img src="img/original-e8278705fab1f1036f26c2419edf8f0f.jpeg" alt="img">
+                    <p>Lorem ipsum dolor sit amet consectetur.</p>
+                </div>
+                <div class="box">
+                    <img src="img/original-e8278705fab1f1036f26c2419edf8f0f.jpeg" alt="img">
+                    <p>Lorem ipsum dolor sit amet consectetur.</p>
+                </div>
+            </div>
+        </div>
+        <div class="section3">
+            <h2 id="contact">contact</h2>
+            <p>feel free to contact me on social media.</p>
+            <div class="icons">
+                <img src="icon/telegram.png" alt="icon">
+                <img src="icon/twitter.png" alt="icon">
+                <img src="icon/youtube.png" alt="icon">
+                <img src="icon/github.png" alt="icon">
+                <img src="icon/instagram.png" alt="icon">
+                <img src="icon/linkedin.png" alt="icon">
+                <img src="icon/whatsapp.png" alt="icon">
+            </div>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; 2021 Lilykhan.</p>
+    </footer>
 </body>
 
 </html>
